# borg

./: .gitignore  Cargo.toml
src/: borg.rs  config.rs  dictionary.rs  discord.rs  main.rs  pattern.rs  seeborg.rs  telegram.rs  util.rs
