[package]
name = "seeborg-rust"
version = "0.1.0"
authors = ["michel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
lazy_static = "1.4.0"
onig = "6"
rand = { version = "0.7.3", features = ["small_rng"] }
telegram-bot = "0.7"
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["macros", "time", "fs"] }